--- a/paper.tex
+++ b/paper.tex
@@ -12,6 +12,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{subfigure}
+\usepackage{paralist}
 
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
