--- a/paper.tex
+++ b/paper.tex
@@ -12,7 +12,6 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{subfigure}
-\usepackage{paralist}
 
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
@@ -39,12 +38,10 @@
 \maketitle
 
 \begin{abstract}
-	Heat stress is a serious risk, which affects in particular  groups like elderly or patients with multiple sclerosis or heart disease and is especially pronounced in cities. Developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour. Everyday tasks such as performing purchases in the supermarket or pharmacy can be scheduled in the early morning or evening when temperatures are lower. 
-	
+	Heat stress is a serious risk, which affects in particular  groups like elderly or patients with multiple sclerosis or heart disease and is especially pronounced in cities. Developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour. 
 To encourage and support such a change of behaviour, we propose a two step approach. The first step is a route planer for pedestrians that can find a route with minimal heat exposure. The second step is a tool that supports the user to select the point in time with a minimal risk of heat stress, considering e.g. the opening hours of a shop. The route planer is then used to calculate the heat stress and present the optimal route at that point in time.
-We evaluate our approach on a part of the city of Karlsruhe, combining remote sensing data of a thermal flight with official weather station data. 
-	
-Our results show that the combined approach, as well as its single steps alone, can reduce the heat exposure and therefore the heat stress for typical daily tasks.
+We evaluate our approach for the city of Karlsruhe. 	
+Our results show that the combined approach, as well as only its single steps, can reduce the heat exposure and therefore the heat stress for typical daily tasks.
 \end{abstract}
 
 \input{introduction}
