finished related work

--- a/introduction.tex
+++ b/introduction.tex
@@ -54,7 +54,4 @@ Several research projects have considered environmental factors for pedestrian r
 The NaviComf framework for pedestrian routing proposed by \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}), enables to improve the comfort considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal
  sensors like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
 
-In our approach we 
-
-%TODO anpassen
-To find a route with minimal heat exposure we are using a different approach then \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}). First of all we didn't have data of a mobile sensor network at hand, instead we're used the remote sensing data of thermal scanner flight as well as the data of weather station. Another contribution is the comparison of different thermal comfort measures like air temperature and heat index. A further difference is the application of static routing algorithm instead of dynamic one as used by \citeauthor{Dang2012}.
+In contrast to the existing work, we contribute an approach which does not rely on extensive sensor networks. We achieve this by combining remote sensing data with in-situ weather stations and the use of a static routing algorithm.
