--- a/evaluation.tex
+++ b/evaluation.tex
@@ -71,30 +71,30 @@ To evaluate the routing, we've selected 1000 random pairs of start and destinati
 
 \begin{table}
 	\centering
-	\begin{tabular}{llcc}
+	\begin{tabular}{lp{8cm}lcc}
 		\hline
-		 & temperature & heat index \\
+		 & & temperature & heat index \\
 		 \hline
 		 \multicolumn{4}{l}{Reduction of heat exposure (\% of cases) }   \\
 		& overall  & \SI{79.70}{\percent} & \SI{80.53}{\percent}  \\
 		& more then \SI{5}{\percent} & \SI{42.72}{\percent} & \SI{45.11}{\percent} \\
 		& more then \SI{10}{\percent} & \SI{13.81}{\percent} & \SI{16.07}{\percent} \\
-		 \multicolumn{4}{l}{Reduction of heat exposure compared to the shortest route}  \\
+		 \multicolumn{4}{l}{Reduction of heat exposure}  \\
 		& average  & \SI{4.63}{\percent} & \SI{4.69}{\percent}  \\
 		& maximum  & \SI{25.97}{\percent} & \SI{26.17 }{\percent}  \\
-		 \multicolumn{4}{l}{Reduction of relative heat exposure}  \\
-		 	& average  & \SI{2.12}{\celsius} & \SI{2.32}{\celsius}  \\
-		 \multicolumn{4}{l}{Increase of distance}  \\
-		 & \% of cases & \SI{93.81}{\percent} & \SI{94.11}{\percent}  \\
-		 & maximum  & \SI{5.59}{\percent} & \SI{5.76}{\percent}  \\
-		 
-		  
-		 
-		\hline
+		\multicolumn{4}{l}{Increase of distance}  \\
+		& \% of cases & \SI{93.81}{\percent} & \SI{94.11}{\percent}  \\
+		& maximum  & \SI{5.59}{\percent} & \SI{5.76}{\percent}  \\
+		 \multicolumn{4}{l}{Reduction of relative heat exposure ($w_d / w_h$)}  \\
+		 & average  & \SI{2.12}{\celsius} & \SI{2.32}{\celsius}  \\
+		 \hline
 	\end{tabular}
+	\caption{Overview of the results each compared to the shortest route. The relative heat exposure is a with the distance weighted average of the thermal comfort measure. \label{tab:results-routing}}
 \end{table}
 
-The heat exposure compared to the shortest route could be reduced in \SI{79.70}{\percent} (\emph{temperature}) respectively  \SI{80.53}{\percent} of the cases. In \SI{42.72}{\percent} (\emph{temperature}; \emph{heatindex}: \SI{45.11}{\percent}) the heat exposure could be reduced by more than \SI{5}{\percent} and in \SI{13.81}{\percent} (\SI{16.07}{\percent}) of the cases by more the \SI{10}{\percent}. At best the heat exposure could be reduced by up to \SI{25.97}{\percent} (\emph{temperature}) respectively  \SI{26.17 }{\percent}. On average the relative heat exposure could be reduce by \SI{2.12}{\celsius} (\emph{temperature}) and \SI{ 2.32}{\celsius} (\emph{heatindex}). The relative heat exposure is the edge weight $w_{T_a}$ or $w_{HI}$ of the path normed on the path length $w_d$ and therefore a with the distance weighted average of the heat exposure. In \SI{93.81}{\percent} (\emph{heatindex}: \SI{94.11}{\percent}) of the cases a longer route was selected. On average the route with minimal heat exposure was \SI{5.59}{\percent} (\emph{temperature}) respectively  \SI{5.76}{\percent} (\emph{heatindex}) longer. 
+An overview of our results is given in table \ref{tab:results-routing}.
+
+%The heat exposure compared to the shortest route could be reduced in \SI{79.70}{\percent} (\emph{temperature}) respectively  \SI{80.53}{\percent} of the cases. In \SI{42.72}{\percent} (\emph{temperature}; \emph{heatindex}: \SI{45.11}{\percent}) the heat exposure could be reduced by more than \SI{5}{\percent} and in \SI{13.81}{\percent} (\SI{16.07}{\percent}) of the cases by more the \SI{10}{\percent}. At best the heat exposure could be reduced by up to \SI{25.97}{\percent} (\emph{temperature}) respectively  \SI{26.17 }{\percent}. On average the relative heat exposure could be reduce by \SI{2.12}{\celsius} (\emph{temperature}) and \SI{ 2.32}{\celsius} (\emph{heatindex}). The relative heat exposure is the edge weight $w_{T_a}$ or $w_{HI}$ of the path normed on the path length $w_d$ and therefore a with the distance weighted average of the heat exposure. In \SI{93.81}{\percent} (\emph{heatindex}: \SI{94.11}{\percent}) of the cases a longer route was selected. On average the route with minimal heat exposure was \SI{5.59}{\percent} (\emph{temperature}) respectively  \SI{5.76}{\percent} (\emph{heatindex}) longer. 
 
 An example can be seen in figure \ref{fig:route-example}. In this example the heat exposure could be reduced by \SI{17.64}{\percent} (\emph{temperature}) and \SI{18.76}{\percent} (\emph{heatindex}), while at the same time the distance only increased by  \SI{0.53}{\percent}.
 
