Updated caption of the routing result table

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -85,11 +85,11 @@ To evaluate the routing, we've selected 1000 random pairs of start and destinati
 		\multicolumn{4}{l}{Increase of distance}  \\
 		& \% of cases & \SI{93.81}{\percent} & \SI{94.11}{\percent}  \\
 		& average & \SI{5.59}{\percent} & \SI{5.76}{\percent}  \\
-		 \multicolumn{4}{l}{Reduction of relative heat exposure ($w_d / w_h$)}  \\
+		 \multicolumn{4}{l}{Reduction of relative heat exposure ($w_h / w_d$)}  \\
 		 & average  & \SI{2.12}{\celsius} & \SI{2.32}{\celsius}  \\
 		 \hline
 	\end{tabular}
-	\caption{Overview of the results each compared to the shortest route. The relative heat exposure is a with the distance weighted average of the thermal comfort measure. \label{tab:results-routing}}
+	\caption{Overview of the results of the routing approach. The values are relative to the shortest route. The relative heat exposure is a with the distance weighted average of the thermal comfort measure. That means, on average the heat exposure was about \SI{2}{\celsius} lower compared to the shortest route. \label{tab:results-routing}}
 \end{table}
 
 An overview of our results is given in table \ref{tab:results-routing}.
