--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,10 +3,9 @@
 
 \section{Conclusion}
 
-The results of our evaluation are showing that the approaches proposed in this paper are able to reduce the heat exposure significantly. Those, the recommendations given can help people to adapt their everyday and reduce their personal risk to be affected by heat stress. That the second approach (finding an optimal point in time with minimal heat exposure)  can decrease the heat stress risk more strongly is not surprising, since the time of the day has a huge effect on the heat exposure. Since, there are no significant differences between the air temperature and the heat index as a thermal comfort measure, we cannot give any advice in this perspective. 
-
-As usually the reduction of heat exposure leads to a longer distance to walk the users should decide based on their personal preferences, i.e. if is user is willing to take longer route to reduce the heat stress risk.
-
-The approach proposed in this paper has some known restrictions and there elimination can be object of future research. First of all, the weather data available had a low spatial and temporal resolution. Utilizing e.g. data from a wireless sensor network can help to improve the data basis and to produce more meaningful results. In that regard, the usage of more complex thermal comfort measure like the UTCI can help to farther improve the reliability of the results. Another restriction is the usage of static routing algorithm instead of dynamic routing method. Using a dynamic routing algorithm as those proposed by \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}) can help to consider the temporal variation more precise.
-
-One very promising extension of our approach to find an optimal time is the consideration from multiple location types (supermarket, pharmacies, ATM, etc.). Thus, the goal is to find a tour with minimal heat exposure that contains exactly one of each location type. Here not only the time and the route with minimal heat exposure should be considered but also, the ordering of the locations.  
+In this work, we proposed a two step approach to reduce the heat stress for individuals. We achieved this goal by creating a decision support system that computes heat-optimal paths to locations as well the optimal points in time to do so. We evaluated this on typical every-day activities such as grocery shopping. 
+We showed that our approach reduces the heat stress in a vast majority of the cases. On average the heat stress can be reduced by ~4.7\% while the trade off in additional distance is also quite low. This is never more than 5.76 \% . We achieved these results, contrary to the existing work, for relatively small distances which average over ~ 2 km.
+The impact of these results are simple, but significant. One can easily compute our approach and decide for themselves the trade-off between additional distance and the heat stress reduction.
+Thanks to the very small assumptions on the data set, one can apply the approach quite easily to other cities. 
+But these assumptions are also the main restriction of this work. Given the rise of smart cities and and (hopefully) more available data sources, one could improve the approach with more fine-detailed data. Even more interesting would be the inclusion of intra urban temperature forecasts. By incorporating exact forecasts of future values along possible pathways, the optimal point in time as well as the reduction of the heat stress could be improved. Additionally the inclusion of more complex heat indices could increase the validity for any potential user. 
+Finally, the computation of an overall route which covers a multitude of potential points of interests would be an interesting extension. This could be used for tourists or even worker scheduling. Here not only the time and the route with minimal heat exposure should be considered but also, the ordering of the locations.  
