Updated optimal time results

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -124,12 +124,11 @@ As a reference solution, we've used the closest location found during the nearby
 		& average  & \SI{4.60}{\percent}  & \SI{4.72}{\percent}  \\
 		\hline
 	\end{tabular}
-	\caption{Overview of the results of the combined approach each compared with the reference solution.  \label{tab:results-optima-time}}
+	\caption{Overview of the results of the combined approach each compared with the reference solution.  \label{tab:results-optimal-time}}
 \end{table}
 
 
-The heat exposure could be reduced in \SI{68.43}{\percent} (\emph{temperature}) respectively \SI{71.08}{\percent} by up to \SI{62.29}{\percent} (\SI{62.88}{\percent}). On average the heat exposure could be reduced by \SI{8.09}{\percent} (\emph{temperature}) and \SI{7.73}{\percent}. The average increase of the distance was \SI{4.60}{\percent} and \SI{4.72}{\percent}.
+The results for the combined approach are given in table \ref{tab:results-optimal-time}. Here the average reduction compared to the routing approach is significantly higher. That is what we expected, because the heat exposure can vary strongly with the time of the day. On the other hand in less case a improvement compare to the reference solution has been found. 
 
-An example can be seen in figure \ref{fig:optimaltime-route-example}. 
-Here the \emph{temperature} weighting selected the same pharmacy and optimal point in time (9:27) as the reference solution. Contrary the \emph{heatindex} routing selected a different pharmacy which is \SI{476.6}{\meter} instead of  \SI{434.5}{\meter} a way from the starting point. Additional the method found a different optimal time (19:39) and those the heat exposure could be reduced by \SI{18.49}{\percent}.  
+In the example given in figure \ref{fig:optimaltime-route-example} the \emph{temperature} weighting selected the same pharmacy and optimal point in time (9:27) as the reference solution. Contrary the \emph{heatindex} routing selected a different pharmacy which is \SI{476.6}{\meter} instead of  \SI{434.5}{\meter} a way from the starting point. Additional the method found a different optimal time (19:39) and those the heat exposure could be reduced by \SI{18.49}{\percent}.  
  
