--- a/evaluation.tex
+++ b/evaluation.tex
@@ -3,22 +3,19 @@
 
 \section{Evaluation}
 
-\subsection{Data \label{sec:data-sets}}
-
+\subsection{Data}
+\label{sec:data-sets}
 As map data, we use the OpenStreetMap (OSM) project \parencite{OSMF2016}. 
 For temperature data we use the hourly air temperature and relative humidity values are originating from the weather station of the German Weather Service (Deutscher Wetterdienste, DWD) in Rheinstetten near Karlsruhe \parencite{DWD2016}. For a finer spatial resolution we use remote sensing data of a thermal scanner flight provided by the Nachbarschaftsverband Karlsruhe (NVK). The data set consists of two scans, recorded in the morning and in the evening of the 26 September 2008. The data are covering an area of  $\SI{25 805}{\meter} \times \SI{39 555}{\meter}$ (EW NS) an have a resolution of $5\,161 \times 7\,911$  pixels. The measured surface temperature is in the range of \SIrange{-1.7}{18.3}{\celsius} (morning and evening). The average surface temperature of the cropped data sets has been \SI{4.18}{\celsius} (morning) respectively \SI{11.24}{\celsius} evening.  
 
 
 \subsection{Data Preparation}
 
-\subsubsection{Routing}
 Before extracting the road network, we cropped the OSM data set to the evaluated area. Afterwards, all ways tagged with \verb|highway|, \verb|railway=platform| or \verb|public_transport=platform| have been extracted.
 
- %In GraphHopper the edge weighting could be adapted for our needs. Additional the frame work provides implementation of many routing algorithms like Dijkstra's algorithm or the $A^*$ algorithm. Since we are only interested in pedestrian routing, we've used the \verb|FOOT| routing profile predefined in GraphHopper, which e.g. avoids certain highways like motorways.  
+To compute the edge weights as described above in section \ref{sec:edge-weighting} we need to make some assumptions. That's because the weather data that we've used lacked either an appropriate spatial resolution or the required temporal resolution. We assume that the actual spatial variation of the temperature conforms with the spatial variation of the thermal scans (deviation from the mean value). For the relative humidity we assume a constant value over the study area. For the temporal variation, we assume that the temporal variation in the examined area correspond to the temporal variation measure at the weather station. We apply the morning scan to timestamps between  00:00 and 11:59 and the evening scan between 12:00 and 23:59.
 
-To compute the edge weights as described above in section \ref{sec:edge-weighting} we need to make some assumptions. That's because the weather data that we've used lacked either an appropriate spatial resolution (data of one weather station)  or the required temporal resolution (only two thermal scans). So, we've assumed that the actual spatial variation of the temperature conforms with the spatial variation of the thermal scans (deviation from the mean value). Because for the relative humidity no further data have been available, we assumed that there subject of any spatial variation. For the temporal variation, we've assumed that the temporal variation in the examined area correspond to the temporal variation measure at the weather station in Rheinstetten.  Additional we've used the thermal scan recorded in the morning for the time between 00:00 and 11:59 and the scan recorded in the evening for the time between 12:00 and 23:59.
-
-So, we computed the air temperature at time $t\in T$ for the raster cell $c_{ij}$ as follows:
+We compute the air temperature at time $t\in T$ for the raster cell $c_{ij}$ as follows:
 \begin{equation}
 \label{eq:derived-temperature}
 T_a(t, c_{ij}) = \begin{cases}
@@ -28,19 +25,15 @@ T_{a}^{station}(t) + \delta_{ij}^{evening} & \text{if $12 \leq t < 24$,}
 \end{equation}
 where $T_{a}^{station}(t)$ is the air temperature measured at the weather station at time $t$ and $\delta^{morning}_{ij}$ respectively  $\delta^{evening}_{ij}$ is the deviation of the raster cell $c_{ij}$ from the mean of all raster cells from the morning respectively evening scan.
 
-To compute an approximation of Steadman's heat index we used the formula published by \textcite[77]{Stull2011}. Since the heat index is only defined for an air temperature between \SI{20}{\celsius} and \SI{50}{\celsius} we've used the air temperature as a fallback, if the air temperature was not within that range. Additionally, should be noted that if the air temperature respectively the heat index dropped in a raster cell below a comfort threshold $T_a^{comfort}$ or $T_{HI}^{comfort}$, then that comfort value has been used, because temperature below this threshold are not considered harmful. For both  $T_a^{comfort}$ or $T_{HI}^{comfort}$ we used \SI{20}{\celsius} as a threshold because temperatures above can cause a light heat stress \parencite{Staiger2011}.
+We compute an approximation of Steadman's heat index with \textcite[77]{Stull2011}. Since the heat index is only defined for an air temperature between \SI{20}{\celsius} and \SI{50}{\celsius} we use the air temperature as a fallback. If the air temperature dropps in a raster cell below a comfort threshold $T_a^{comfort}$ or $T_{HI}^{comfort}$, then that comfort value will be used, because temperature below this threshold are not considered harmful. 
+For the implementation of the routing we used the GraphHopper framework for Java \parencite{GraphHopper2016,GraphHopper2016a}.
 
-For the actual implementation of the routing we used the GraphHopper framework for Java \parencite{GraphHopper2016,GraphHopper2016a}.
 
-\subsubsection{Optimal Time}
-
-To find an optimal point in time we used the procedure described in section \ref{sec:find-optimal-time}. As data we used the OSM data as well, because they contain the information necessary, i.e. points of interest with associated opening hours. 
+To find an optimal point in time we used the procedure described in section \ref{sec:find-optimal-time}. 
 
 For the nearby search,  we're using a list of selected OSM tags like \verb|shop=supermarket| or \verb|amenity=pharmacy| as a search criteria. We also only considering locations which have opening hours specified (via the \verb|opening_hours| tag). Additionally, only locations which are in a defined radius around the starting point are considered, at this we used the direct distance (“as the crow flies”). To reduce the computation effort a maximum number of results $k$ can be specified.
 
 As optimization algorithm, we used implementation of Brent's method in the Apache Commons Mathematics Library \parencite{ASF2016} with 10 random start points to reduce the risk that only a local optimum is found.
-
-If a shop is not opened over lunch, then for every time window (e.g. 9:00--13:00 and 14:00--18:30) an optimal time is determined and accordingly the solution with lowest heat exposure is used.
 
 \subsection{Results}
 
@@ -65,7 +58,7 @@ If a shop is not opened over lunch, then for every time window (e.g. 9:00--13:00
 		& average  & \SI{2.12}{\celsius} & \SI{2.32}{\celsius}  \\
 		\hline
 	\end{tabular}
-	\caption{Overview of the results of the routing approach. The values are relative to the shortest route. The relative heat exposure is a with the distance weighted average of the thermal comfort measure. That means, on average the heat exposure was about \SI{2}{\celsius} lower compared to the shortest route. \label{tab:results-routing}}
+	\caption{Overview of the results of the routing approach. The values are relative to the shortest route. \label{tab:results-routing}}
 \end{table}
 
 
@@ -85,9 +78,10 @@ If a shop is not opened over lunch, then for every time window (e.g. 9:00--13:00
 \footnotetext{\url{http://creativecommons.org/licenses/by/3.0}}
 \footnotetext{\url{http://www.openstreetmap.org/copyright}}
 
-To evaluate the routing, we've selected 1000 random pairs of start and destinations points form the examined  area and 10 random dates from the period of 1 June to 31 August 2015. For each of the start destination pairs and each date we've performed the evaluation at 7:00, 11:00, 15:00, 19:00 and 23:00, so overall we had $50\,000$ samples. As edge weighting we've used the air temperature (equation \eqref{eq:edge-weight-temperature}, \emph{temperature})  and the heat index \eqref{eq:edge-weight-heatindex}, \emph{heatindex}). For comparison, we computed for each sample the shortest path. 
+To evaluate the routing, we select 1000 random pairs of start and destinations points form the examined  area and 10 random dates from the period of 1 June to 31 August 2015. For each of the start destination pairs and each date we  perform the evaluation at 7:00, 11:00, 15:00, 19:00 and 23:00, so overall we had $50\,000$ samples. As benchmark we computed for each sample the shortest path. 
 
-An overview of our results is given in table \ref{tab:results-routing}. In many cases the heat exposure could be reduced. On average the heat exposure has been decreased by \SI{4.63}{\percent}/\SI{4.69}{\percent} while in the same time the distance was increased by  \SI{5.59}{\percent}/\SI{5.76}{\percent} on average. In some cases the heat exposure could be reduced by up to \SI{25}{\percent}. The weighted average of the thermal comfort measure could be reduced by about \SI{2}{\celsius} on average. There are only slight differences between the air temperature and the heat index as measure for thermal comfort. 
+
+An overview of our results is given in table \ref{tab:results-routing}. In many cases the heat exposure could be reduced. On average the heat exposure has been decreased by \SI{4.63}{\percent}/\SI{4.69}{\percent} while in the same time the distance was increased by  \SI{5.59}{\percent}/\SI{5.76}{\percent} on average. In some cases the heat exposure can be reduced by up to \SI{25}{\percent}. The weighted average of the thermal comfort measure can be reduced by about \SI{2}{\celsius} on average. There are only slight differences between the air temperature and the heat index as measure for thermal comfort. 
 
 In the example given in figure \ref{fig:route-example} the heat exposure could be reduced by \SI{17.64}{\percent} (\emph{temperature}) and \SI{18.76}{\percent} (\emph{heatindex}), while at the same time the distance only increased by  \SI{0.53}{\percent}.
 
@@ -102,7 +96,7 @@ In the example given in figure \ref{fig:route-example} the heat exposure could b
 
 For the evaluation of optimal time finding procedure we selected 750 random start points. One of the following four search criteria has been assigned to each of the start points at random: supermarket, bakery, chemist or pharmacy. For each of the start points a random start time $t_{now}$ has been selected from the period of 8:00 to 20:00. The radius has been set to \SI{1000}{\meter} for all start points and the maximum number of results has been set to 5. Additionally, for all start points a time buffer $t_{buff}$ of 15 minutes has been assumed. 
 
-As a reference solution, we've used the closest location found during the nearby search, computed the shortest path from the starting point to this location and evaluated the heat exposure at time $t_{now}$. The evaluation is performed only for the locations with rank 1, because those have the lowest heat exposure.
+As a reference solution, we use the closest location found during the nearby search, compute the shortest path from the starting point to this location and evaluated the heat exposure at time $t_{now}$. 
 
 \begin{table}
 	\centering
@@ -123,7 +117,7 @@ As a reference solution, we've used the closest location found during the nearby
 \end{table}
 
 
-The results for the combined approach are given in table \ref{tab:results-optimal-time}. Here the average reduction compared to the routing approach is significantly higher. That is what we expected, because the heat exposure can vary strongly with the time of the day. On the other hand in less case a improvement compare to the reference solution has been found. 
+The results for the combined approach are given in table \ref{tab:results-optimal-time}. Here the average reduction compared to the routing approach is significantly higher. This is expected as the heat exposure can vary strongly with the time of the day. 
 
 In the example given in figure \ref{fig:optimaltime-route-example} the \emph{temperature} weighting selected the same pharmacy and optimal point in time (9:27) as the reference solution. Contrary the \emph{heatindex} routing selected a different pharmacy which is \SI{476.6}{\meter} instead of  \SI{434.5}{\meter} a way from the starting point. Additional the method found a different optimal time (19:39) and those the heat exposure could be reduced by \SI{18.49}{\percent}.  
  
