Truncated heat stress

--- a/introduction.tex
+++ b/introduction.tex
@@ -26,11 +26,9 @@ In this paper we use this reasoning into a two step approach to help individuals
 \subsection{Related Work} 
 
 \subsubsection{Heat Stress}
-The impact of heat on the human body has long been a subject of study. In particular , the term thermal comfort plays a key role, which describes climatic conditions consider comfortable, i.e. neither to warm nor to cold.
+The impact of heat on the human body has long been a subject of study. In particular , the term thermal comfort plays a key role, which describes climatic conditions consider comfortable, i.e. neither to warm nor to cold. 
 
-Heat can be defined in several ways, where the most simple one is the air temperature. But other, more in depth approaches consider additional factors such as e.g. humidity and physical activity \parencite{Staiger2011,Huebler2007}. Staiger et al.\parencite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. They present such a model and update this model to include factors such as sweating in a follow up paper\parencite{Staiger2011}. 
-
-As such exhaustive models are quite difficult to compute and the necessary data is not always available, heat indices are often employed. The most well known indices that consider a complete human heat budget model are the following:
+Staiger et al. \parencite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well known indices that consider a complete human heat budget model are the following:
 \begin{inparaenum}[(1)]
   \item \citeauthor{Steadman1979}'s heat index (\citeauthor{Steadman1979} \citeyear*{Steadman1979}\citeyear*{Steadman1979a}),
   \item the predicted mean vote (PMV) \parencite{Fanger1973},
