--- a/introduction.tex
+++ b/introduction.tex
@@ -6,15 +6,10 @@
 Heat is an important factor to human health and comfort. High temperatures cannot only lead to a discomfort,such as sweating, it also has serious negative effects on the health as well as on the ability to work. 
 
 In numerous studies an increase in both mortality and
-morbidity has been associated with a high ambient temperature \parencite{Basu2009}. The most well known example in recent history is the 2003 heat wave in Europe. In France alone 19490 heat related deaths were to be mourned, an excess
-mortality of 60\% for the whole country. In Paris the excess mortality reached 
-142\% \parencite{Trobine2008death}. 
-
+morbidity has been associated with a high ambient temperature \parencite{Basu2009}. The most well known example in recent history is the 2003 heat wave in Europe. 
 Certain groups are especially vulnerable to heat stress such as older people or people with health problems \parencite{Ebi2004,Huebler2007}. For patients with multiple sclerosis an increased body temperature can lead to a worsening of their symptoms \parencite{Davis2010}.
 
-Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. Due to the tendency that a rising number of people is moving into the cities \parencite{department2014world}, the urban heat island effect (UHI) is gaining more importance in the future. The UHI effect states that an urban area can be  \SIrange{8}{12}{\celsius} warmer than the rural areas \parencite{Prashad2014}. This increased temperature can be caused by several facts. One example is that urban materials such as asphalt, concrete, and bricks are storing the energy from the sun and releasing it later to their surrounding \parencite{Prashad2014}. 
-
-There are several possiblities that can been taken to reduce the heat stress. These range from urban planning measures to the implementation of heat warning systems \parencite{Ebi2004}. But these steps are only available on large scale projects. Individuals can reduce their heat stress by adapting their everyday behaviour. In this work we present a two step approach to help individuals in doing so.
+Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. Due to the tendency that a rising number of people is moving into the cities, the urban heat island effect (UHI) is gaining more importance in the future. The UHI effect states that an urban area can be  \SIrange{8}{12}{\celsius} warmer than the rural areas \parencite{Prashad2014}. Individuals can reduce their heat stress by adapting their everyday behaviour. In this work we present a two step approach to help individuals in doing so.
 
 In a city, most typical activities are in walking distance. These can range from going to a grocery store to the visit of a doctor. And while these activities can not be omitted, it is possible to use different routes or change the time when they are conducted. In doing so, one can easily reduce the heat stress without any negative impact on the quality of life. 
 
@@ -26,7 +21,7 @@ In this paper we use this reasoning into a two step approach to help individuals
 \subsection{Related Work} 
 
 \subsubsection{Heat Stress}
-The impact of heat on the human body has long been a subject of study. In particular , the term thermal comfort plays a key role, which describes climatic conditions consider comfortable, i.e. neither to warm nor to cold. 
+The impact of heat on the human body has long been a subject of study. Thermal comfort plays a key role, which describes climatic conditions consider comfortable. 
 
 Staiger et al. \parencite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well known indices that consider a complete human heat budget model are the following:
 \begin{inparaenum}[(1)]
